manifests/bootstrap/traefik/middleware-oauth2-proxy.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy
  namespace: traefik
spec:
  forwardAuth:
    address: http://oauth2-proxy-stack.oauth2-proxy.svc.cluster.local:80
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Access-Token
      - Authorization
